@@ -7,7 +7,6 @@ echo Submitting spark job to Armada.
 scripts="$(cd "$(dirname "$0")"; pwd)"
 source "$scripts/init.sh"
 
-
 if [ "${INCLUDE_PYTHON}" == "false" ]; then
     NAME=spark-pi
     CLASS_PROMPT="--class"
@@ -51,13 +50,34 @@ docker run -v $scripts/../conf:/opt/spark/conf --rm --network host $IMAGE_NAME \
     --name $NAME \
     $CLASS_PROMPT $CLASS_ARG \
     $AUTH_ARG \
+    --conf spark.driver.extraJavaOptions="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005" \
+    --conf spark.executor.extraJavaOptions="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005" \
+    --conf spark.armada.scheduling.namespace=default \
+    --conf spark.armada.executor.limit.memory=4Gi \
+    --conf spark.armada.executor.request.memory=4Gi \
+    --conf spark.armada.driver.limit.memory=4Gi \
+    --conf spark.armada.driver.request.memory=4Gi \
+    --conf spark.armada.internalUrl="armada://10.244.1.196:50051" \
     --conf spark.home=/opt/spark \
-    --conf spark.executor.instances=2 \
     --conf spark.armada.container.image=$IMAGE_NAME \
     --conf spark.armada.scheduling.nodeUniformity=armada-spark \
-    --conf spark.armada.internalUrl="armada://10.244.2.14:50051" \
     --conf spark.kubernetes.file.upload.path=/tmp \
     --conf spark.kubernetes.executor.disableConfigMap=$DISABLE_CONFIG_MAP \
-    --conf spark.driver.extraJavaOptions="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005" \
-    --conf spark.executor.extraJavaOptions="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED " \
+    --conf spark.local.dir=/tmp \
+    --conf spark.default.parallelism=10 \
+    --conf spark.sql.shuffle.partitions=5 \
+    --conf spark.dynamicAllocation.enabled=true \
+    --conf spark.dynamicAllocation.minExecutors=1 \
+    --conf spark.dynamicAllocation.maxExecutors=16 \
+    --conf spark.dynamicAllocation.initialExecutors=1 \
+    --conf spark.dynamicAllocation.executorIdleTimeout=1 \
+    --conf spark.dynamicAllocation.schedulerBacklogTimeout=1 \
+    --conf spark.dynamicAllocation.shuffleTracking.enabled=false \
+    --conf spark.kubernetes.allocation.batch.size=16 \
+    --conf spark.kubernetes.allocation.batch.delay=101ms \
+    --conf spark.decommission.enabled=true \
+    --conf spark.storage.decommission.enabled=true \
+    --conf spark.storage.decommission.shuffleBlocks.enabled=true \
+    --conf spark.storage.decommission.fallbackStorage.cleanUp=true \
+    --conf spark.kubernetes.executor.deleteOnTermination=false \
     $FIRST_ARG  "${FINAL_ARGS[@]}"
